--- a/app/component/start/start.component.html
+++ b/app/component/start/start.component.html
@@ -13,11 +13,13 @@
 [config]="dynamicItems"
 [model]="formModel">
 </form-viewer-comp>
-</div> -->
+</div>
 
   <div class="col-xs-12">
    <form-builder-comp>
 
    </form-builder-comp>
     </div>
+
+    -->
 </div>
