--- a/app/common/dynamic-form/containers/dynamic-form.component.html
+++ b/app/common/dynamic-form/containers/dynamic-form.component.html
@@ -1,6 +1,8 @@
+<pre>{{group.value | json}}</pre>
 <ng-container
-  *ngFor="let conf of items;"
+  *ngFor="let config of items;"
   dynamicItem
-  [config]="conf"
+  [config]="config"
   [group]="group">
 </ng-container>
+<!-- -->
