fix(refactoring): wip

--- a/app/common/ui-basic/formGroup/item-formGroup.component.html
+++ b/app/common/ui-basic/formGroup/item-formGroup.component.html
@@ -13,6 +13,6 @@
   <div *ngIf="currentFormItem.status == 'PENDING'">
     Validation is pending...
   </div>
-  <small [attr.id]="config.key+'Help'" class="form-text text-muted"><pre>{{currentFormItem.value | json}}</pre></small>
+  <small [attr.id]="config.key+'Help'" class="form-text text-muted"></small>
 
 </fieldset>
