--- a/app/component/start/start.component.html
+++ b/app/component/start/start.component.html
@@ -6,7 +6,9 @@
 </div>
 
 <div class="row marketing">
-
+  <!--
+   <google-address-search></google-address-search>
+    -->
   <!--
 <div class="col-lg-6">
 <form-viewer-comp
