fix(custom components): google autocomplete

--- a/src/app/common/ui-basic/container/container.component.html
+++ b/src/app/common/ui-basic/container/container.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="isRendered">
+<div [ngClass]="getWrapperClass()" *ngIf="isRendered">
 
   <ng-container
     *ngFor="let conf of items;"
