fix(textmask): wip

--- a/src/app/modules/dymanic-form-element/dynamic-form-element.component.html
+++ b/src/app/modules/dymanic-form-element/dynamic-form-element.component.html
@@ -1,8 +1,7 @@
-<pre>{{group.value | json}}</pre>
 <ng-container
   *ngFor="let config of items;"
   dynamicFormElement
   [config]="config"
   [group]="group">
 </ng-container>
-<!-- -->
+<!-- <pre>{{group.value | json}}</pre> -->
