--- a/src/app/modules/ui-basic/control/control.component.html
+++ b/src/app/modules/ui-basic/control/control.component.html
@@ -1,5 +1,6 @@
-<div [formGroup]="group" *ngIf="isRendered">
-  <label [attr.for]="config.key" [attr.class]="'form-control-label'">
+<div [formGroup]="group" *ngIf="formInitialized && isRendered">
+  <label [attr.for]="config.key" [attr.class]="'form-control-label'"
+         *ngIf="isLabelVisible('textbox')">
     {{config.label}}
   </label>
 
@@ -8,31 +9,24 @@
     *ngIf="isControlTypeVisible('textbox')"
     [formControlName]="config.key"
     [ngClass]="getControlClass()"
-    formatterParserTextMask
-    [config]="config">
+    [formatterParserTextMask]="config">
 
-  <div *ngIf="isControlTypeVisible('radio')">
-    <div [ngClass]="getControlClass()" *ngFor="let option of config.options">
-      <label [attr.class]="'form-check-label'">
-        <input type="radio"
-               [formControlName]="config.key"
-               [attr.class]="getControlClass()"
-               [value]="option.label">
-        {{option.value}}
-      </label>
-    </div>
-  </div>
+  <label [attr.class]="'form-check-label'" *ngFor="let opt of config.options">
+    <input type="radio"
+           [formControlName]="config.key"
+           [attr.class]="getControlClass()"
+           [value]="opt.label">
+    {{opt.value}}
+  </label>
 
-  <div class="form-check" *ngIf="isControlTypeVisible('checkbox')">
-    <label class="form-check-label">
-      <input type="checkbox"
-             [ngClass]="getControlClass()"
-
-             [formControlName]="config.key"
-             name="{{config.key}}">
-      {{config.label}}
-    </label>
-  </div>
+  <label class="form-check-label"
+         *ngIf="isControlTypeVisible('checkbox')">
+    <input type="checkbox"
+           [ngClass]="getControlClass()"
+           [formControlName]="config.key"
+           name="{{config.key}}">
+    {{config.label}}
+  </label>
 
   <select
     *ngIf="isControlTypeVisible('select')"
@@ -55,19 +49,17 @@
     *ngIf="isControlTypeVisible('textarea')"
     [formControlName]="config.key"
     [ngClass]="getControlClass()"
-    formatterParser
-    [config]="config">
+    [formatterParserTextMask]="config">
   </textarea>
 
-  <!--
+  <!-- -->
   <item-errors [config]="config" [group]="currentFormItem">
   </item-errors>
 
   <div *ngIf="getCurrentStatus() == 'PENDING'">
     Validation is pending...
   </div>
-  -->
-  <small [attr.id]="config.key+'Help'" class="form-text text-muted">{{config.helpText}}</small>
+
+  <small [attr.id]="config.key+'Help'" class="form-text text-muted">{{currentFormItem.value}}<br/>{{config.helpText}}</small>
 
 </div>
-
