fix(formArray): wip

--- a/src/app/modules/dymanic-form-element/dynamic-form-element.component.html
+++ b/src/app/modules/dymanic-form-element/dynamic-form-element.component.html
@@ -4,4 +4,4 @@
   [config]="config"
   [group]="group">
 </ng-container>
-<!-- <pre>{{group.value | json}}</pre> -->
+<pre>{{group.value | json}}</pre> <!--  -->
