fix(formArray): wip

--- a/src/app/modules/dymanic-form-element/dynamic-form-element.component.html
+++ b/src/app/modules/dymanic-form-element/dynamic-form-element.component.html
@@ -3,5 +3,6 @@
   dynamicFormElement
   [config]="config"
   [group]="group">
+  <ng-content></ng-content>
 </ng-container>
 <pre>{{group.value | json}}</pre> <!--  -->
