fix(general): wip

--- a/src/app/component/start/form-config-selector/form-config-selector.component.html
+++ b/src/app/component/start/form-config-selector/form-config-selector.component.html
@@ -2,6 +2,7 @@
 -->
 <form novalidate [formGroup]="configSelectionForm" (ngSubmit)="onSubmitConfigSelection(configSelectionForm);">
   <!-- -->
+  {{configSelectionConfig | json}}
   <dynamic-form-group
     [config]="configSelectionConfig"
     [group]="configSelectionForm">
