--- a/src/app/modules/dynamic-form-addons/components/custom-radio/custom-radio.component.html
+++ b/src/app/modules/dynamic-form-addons/components/custom-radio/custom-radio.component.html
@@ -1,5 +1,5 @@
-<div [formGroup]="group">
-
+<div [formGroup]="group"  *ngIf="formInitialized">
+dddd
   <label [attr.class]="'form-check-label'" *ngFor="let opt of config.options">
     <input type="radio"
            [formControlName]="config.key"
@@ -9,3 +9,6 @@
   </label>
 
 </div>
+
+
+
