--- a/src/app/modules/dynamic-form-addons/components/google-address-search/google-address-search.component.html
+++ b/src/app/modules/dynamic-form-addons/components/google-address-search/google-address-search.component.html
@@ -19,8 +19,8 @@
     #searchInput>
 
   <!--
-  <item-errors [config]="config" [group]="currentFormItem">
-  </item-errors>
+  <messages [config]="config" [group]="currentFormItem">
+  </messages>
 
   <div *ngIf="getCurrentStatus() == 'PENDING'">
     Validation is pending...
