--- a/src/app/modules/ui-basic/control/control.component.html
+++ b/src/app/modules/ui-basic/control/control.component.html
@@ -53,8 +53,8 @@
   </textarea>
 
   <!-- -->
-  <item-errors [config]="config" [group]="currentFormItem">
-  </item-errors>
+  <messages [config]="config" [group]="currentFormItem">
+  </messages>
 
   <div *ngIf="getCurrentStatus() == 'PENDING'">
     Validation is pending...
