--- a/src/app/modules/ui-basic/formArrayGroup/item-formArrayGroup.component.html
+++ b/src/app/modules/ui-basic/formArrayGroup/item-formArrayGroup.component.html
@@ -10,7 +10,7 @@
 
   <ng-content></ng-content>
   <!--
-    <item-errors [config]="config" [group]="currentFormItem"></item-errors>
+    <messages [config]="config" [group]="currentFormItem"></messages>
 
     <div *ngIf="currentFormItem.status == 'PENDING'">
       Validation is pending...
