--- a/src/app/modules/ui-basic/formGroup/item-formGroup.component.html
+++ b/src/app/modules/ui-basic/formGroup/item-formGroup.component.html
@@ -8,7 +8,7 @@
     [group]="currentFormItem">
   </ng-container>
 
-    <item-errors [config]="config" [group]="currentFormItem"></item-errors>
+    <messages [config]="config" [group]="currentFormItem"></messages>
 
     <div *ngIf="currentFormItem.status == 'PENDING'">
       Validation is pending...
