--- a/src/app/modules/ui-basic/textarea/textarea.component.html
+++ b/src/app/modules/ui-basic/textarea/textarea.component.html
@@ -12,8 +12,8 @@
 
   <small [attr.id]="config.key+'Help'" class="form-text text-muted">{{currentFormItem.value}}<br/>{{config.helpText}}</small>
 
-  <item-errors [config]="config" [group]="currentFormItem">
-  </item-errors>
+  <messages [config]="config" [group]="currentFormItem">
+  </messages>
 
   <div *ngIf="getCurrentStatus() == 'PENDING'">
     Validation is pending...
