--- a/src/app/modules/ui-basic/textbox/textbox.component.html
+++ b/src/app/modules/ui-basic/textbox/textbox.component.html
@@ -4,15 +4,19 @@
   </label>
 
   <input
+    name="test"
     [type]="config.inputType"
     [formControlName]="config.key"
     [ngClass]="getControlClass()"
-    [formatterParserTextMask]="config">
+    [formatterParserTextMask]="config"
+    >
 
-  <small [attr.id]="config.key+'Help'" class="form-text text-muted">{{currentFormItem.value}}<br/>{{config.helpText}}</small>
+  <small [attr.id]="config.key+'Help'" class="form-text text-muted">{{currentFormItem.value}}<br/>{{config.helpText}}
+  </small>
 
-  <item-errors [config]="config" [group]="currentFormItem">
-  </item-errors>
+  <messages [config]="config" [group]="currentFormItem">
+  </messages>
+
 
   <div *ngIf="getCurrentStatus() == 'PENDING'">
     Validation is pending...
